# VulkanGraphicsTests

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app/: globals.cpp  globals.h
app/UI/: ui.cpp  ui.h
app/update/: physicsObject.h  update.cpp  update.h
complementary/: fpsCounter.cpp  handMade.cpp  handMade.h  imGuiCustom.cpp  vulkanSupport.cpp  vulkanSupport.h
core/: api.cpp  basicPipeline.cpp  commandBuffer.cpp  core.cpp  core.h  debugging.cpp  detail.cpp  hooks.cpp  imGui.cpp  init.cpp  initBuffers.cpp  initPipeline.cpp  initPipelineHelper.cpp  mainLoop.cpp  swapChain.cpp  uniformBuffer.cpp  update.cpp  updateBuffers.cpp
core/graphics/: bufferManager.cpp  pipelineManager.cpp  swapChainManager.cpp
core/window/: windowManager.cpp
extras/: fpsCounter.cpp  handMade.cpp  imGuiCustom.cpp  vulkanSupport.cpp
include/ThING/: api.h  consts.h  core.h  types.h
include/ThING/core/: appContext.h  detail.h
include/ThING/extras/: fpsCounter.h  handMade.h  imGuiCustom.h  vulkanSupport.h
include/ThING/graphics/: bufferManager.h  pipelineManager.h  swapChainManager.h
include/ThING/types/: buffer.h  circle.h  dynamicBuffer.h  polygon.h  quad.h  uniformBufferObject.h
include/ThING/window/: windowManager.h
shaders/: basic.vert  basicVert.spv  circle.frag  circle.vert  circleFrag.spv  circleVert.spv  compile.bat  compile.sh  shader.vert  vert.spv
types/: circle.h  physicsObject.h  polygon.h  vertex.h
